--- a/html/index1-2.html
+++ b/html/index1-2.html
@@ -10,8 +10,8 @@
       font-family: FZB;
       src: url('../font/CN-SemiBold.otf');
     }
-    .app{ position: relative; width:690px; height:820px; margin:0 auto;background: url("../imgs/share-cir.jpg") no-repeat}
-    .app .date{ position: absolute; top:156px;left:318px;font-size: 22px; color: #141414;font-weight: bold}
+    .app{font-family: "FZB"; position: relative; width:690px; height:820px; margin:0 auto;background: url("../imgs/share-cir.jpg") no-repeat}
+    .app .date{ position: absolute; top: 154px; left: 320px;font-size: 22px; color: #141414;font-weight: bold}
     .app .content{position: absolute; top:286px;left:98px;width:480px;font-size: 47px;line-height: 68px; color: #271400;}
     .app .nickname{position: absolute; top:541px;left:429px;width:200px;overflow:hidden;font-size: 26px;color: #271400;}
   </style>
