--- a/html/index3.html
+++ b/html/index3.html
@@ -6,7 +6,11 @@
   <title>card2</title>
   <style>
     *{margin: 0;padding: 0;}
-    .container{width: 750px;margin: 0 auto;background-color: #fff;padding:30px;padding-bottom:0;box-sizing: border-box}
+    @font-face {
+      font-family: FZB;
+      src: url('../font/CN-SemiBold.otf');
+    }
+    .container{width: 750px; height:600px;margin: 0 auto;background-color: #fff;padding:30px;padding-bottom:0;box-sizing: border-box;font-family: FZB}
     .container .card { padding:22px;padding-bottom:0;border-radius: 20px;background-color: #fff;box-shadow: 0 6px 10px 4px #c9c9ca;}
     .flex-center{display: flex;justify-content: center;align-items: center}
     .icon-share { width:37px; height:35px;margin-right: 10px}
