--- a/html/index1.html
+++ b/html/index1.html
@@ -6,11 +6,11 @@
   <title>每日签语</title>
   <style>
     *{ margin:0; padding:0;}
-    @font-face {
+   /* @font-face {
       font-family: FZB;
       src: url('../font/CN-SemiBold.otf');
-    }
-    .app{width:750px; height:600px; margin:0 auto; padding:16px 30px;box-sizing: border-box; background-color: #eeeff0;font-family: FZB}
+    }*/
+    .app{width:750px; height:600px; margin:0 auto; padding:16px 30px;box-sizing: border-box; background-color: #eeeff0;font-family: "思源宋体 CN SemiBold"}
     .app .page { width:100%; height:100%; padding:22px;box-sizing: border-box;border-radius: 20px;background-color: #fff}
     .app .page .content{ width:100%; height:100%; padding:55px 68px;box-sizing: border-box; border: 1px solid #000;}
     .app .page .content .date{ position: relative; width:120px; height:120px; margin:0 auto;border-radius: 60px; background-color: #efeae7;font-size:28px;color: #141414;line-height: 120px;text-align: center;}
