--- a/html/index1.html
+++ b/html/index1.html
@@ -2,31 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=750,user-scalable=no">
+  <meta name="viewport" content="width=420,user-scalable=no">
   <title>每日签语</title>
   <style>
     *{ margin:0; padding:0;}
-   /* @font-face {
-      font-family: FZB;
-      src: url('../font/CN-SemiBold.otf');
-    }*/
-    .app{width:750px; height:600px; margin:0 auto; padding:16px 30px;box-sizing: border-box; background-color: #eeeff0;font-family: "思源宋体 CN SemiBold"}
-    .app .page { width:100%; height:100%; padding:22px;box-sizing: border-box;border-radius: 20px;background-color: #fff}
-    .app .page .content{ width:100%; height:100%; padding:55px 68px;box-sizing: border-box; border: 1px solid #000;}
-    .app .page .content .date{ position: relative; width:120px; height:120px; margin:0 auto;border-radius: 60px; background-color: #efeae7;font-size:28px;color: #141414;line-height: 120px;text-align: center;}
-    .app .page .content .date:before{ content: '';position: absolute; width:8px;border-bottom: 2px solid #000; top:50%;left:10px}
-    .app .page .content .date:after{ content: '';position: absolute; width:8px;border-bottom: 2px solid #000;top:50%; right:10px;}
-    .app .page .content .text{display: flex;align-items: center; margin:30px 0;font-size: 48px; color: #271400;overflow: hidden}
+    .app{width:420px; height:336px; margin:0 auto; padding:18px;box-sizing: border-box; background:url("../imgs/icon-qianyubg@2x.png");background-repeat:no-repeat;background-size:cover;font-family: "思源宋体 CN SemiBold"}
+    .app .page { width:100%; height:100%; padding:10px;box-sizing:border-box; background-color: #fff}
+    .app .page .content{ width:100%; height:100%; border:1px solid #b6afa9; padding:16px 18px;box-sizing: border-box;display: flex;flex-direction: column;align-items: stretch;}
+    .content .text{ flex:1;display:flex;align-items:center;font-size: 36px;overflow: hidden;text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical;}
+    .user-info{display: flex; height:38px;align-items: center;}
+    .avatar{ width:38px; height:38px;border-radius: 19px}
+    .nickname { color: #888888;font-size: 24px;padding-left: 8px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
   </style>
 </head>
 <body>
 <div id="app" class="app">
   <div class="page">
     <div class="content">
-      <div class="date">0709</div>
-      <br><br><br>
-      <div class="text">“所有的大人都曾经</div>
-      <br><br><br>
+      <div class="user-info">
+        <img class="avatar" src="../imgs/avatar.jpg" alt="">
+        <div class="nickname">竟将丸子</div>
+      </div>
+      <div class="text">“所有的大人都曾经的大人都曾经的大人经都曾经的大经的大人”</div>
     </div>
   </div>
 </div>
