--- a/html/index3.html
+++ b/html/index3.html
@@ -2,108 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=750,user-scalable=no">
+  <meta name="viewport" content="width=420,user-scalable=no">
   <title>card2</title>
   <style>
     *{margin: 0;padding: 0;}
-    @font-face {
-      font-family: FZB;
-      src: url('../font/CN-SemiBold.otf');
-    }
-    .container{width: 750px; height:600px;margin: 0 auto;background-color: #fff;padding:30px;padding-bottom:0;box-sizing: border-box;font-family: FZB}
-    .container .card { padding:22px;padding-bottom:0;border-radius: 20px;background-color: #fff;box-shadow: 0 6px 10px 4px #c9c9ca;}
-    .flex-center{display: flex;justify-content: center;align-items: center}
-    .icon-share { width:37px; height:35px;margin-right: 10px}
+    .app{ position: relative;width:420px; height:336px; margin:0 auto;box-sizing: border-box; background-color: #eeeff0;}
+    .app img{display: block}
+    .app .share-yunshi{ width:100%; height:100%;}
+    .app .user-info{position: absolute; top:50%; left:50%;margin-top: -55px;margin-left: -55px;display: flex;flex-direction:column;align-items: center;justify-content: center; width:110px; height:110px;}
+    .app .user-info .user-avatar{ width:60px; height:60px;border-radius: 30px;}
+    .app .user-info .user-nickname{ width:100%;padding-top:5px;font-size: 16px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;text-align: center}
 
-    .container .content2 .luck-list{ height:328px;display: flex;justify-content: space-between}
-    .container .content2 .luck-list .luck-item{width: 150px; height:100%;}
-    .container .content2 .luck-list .luck-item .luck-common{ width:100%; height:76px;line-height: 76px; text-align: center; background-color: #d8cbc4;border-radius: 10px 10px 0 0;font-weight: bold; color: #040404;}
-    .container .content2 .luck-list .luck-item .percent{display: flex;flex-direction: column; height:252px; border:1px solid #f2f2f2;border-radius: 0 0 10px 10px;box-shadow:0 2px 1px 0px #d2d1d1;}
-    .container .content2 .luck-list .luck-item .percent .percent-bingtu{flex: 1;display: flex;justify-content: center;align-items: center}
-    .container .content2 .luck-list .luck-item .percent .percent-num{ height:84px;line-height:84px;text-align: center}
-    .container .content2 .user-info .user-avatar{display: block; width:100%; height:100%;border-radius: 45px;overflow: hidden}
-    .container .content2 .today-total-lucy {line-height: 48px;text-align: center; color: #000;padding: 46px 0;}
-    .font38{font-size: 38px}
-    .font28{font-size: 28px}
-    .font34{font-size: 34px}
   </style>
 </head>
 <body>
-<div class="container">
-  <div class="card card2">
-    <div class="content2">
-      <div class="luck-list font28">
-        <div class="luck-item">
-          <div class="luck-common">爱情运</div>
-          <div class="percent">
-            <div class="percent-bingtu">
-              <canvas id="luckCanvas1" width="60px" height="60px"/>
-            </div>
-            <div class="percent-num"><span class="font38 luck-num-1">98</span>%</div>
-          </div>
-        </div>
-        <div class="luck-item">
-          <div class="luck-common">财富运</div>
-          <div class="percent">
-            <div class="percent-bingtu">
-              <canvas id="luckCanvas2" width="60px" height="60px"/>
-            </div>
-            <div class="percent-num"><span class="font38 luck-num-2">98</span>%</div>
-          </div>
-        </div>
-        <div class="luck-item">
-          <div class="luck-common">升职运</div>
-          <div class="percent">
-            <div class="percent-bingtu">
-              <canvas id="luckCanvas3" width="60px" height="60px"/>
-            </div>
-            <div class="percent-num"><span class="font38 luck-num-3">98</span>%</div>
-          </div>
-        </div>
-        <div class="luck-item">
-          <div class="luck-common">健康运</div>
-          <div class="percent">
-            <div class="percent-bingtu">
-              <canvas id="luckCanvas4" width="60px" height="60px"/>
-            </div>
-            <div class="percent-num"><span class="font38 luck-num-4">98</span>%</div>
-          </div>
-        </div>
-      </div>
-      <div class="today-total-lucy font34">
-        <div>今日整体运势爆棚</div>
-        <div>一句话运势</div>
-      </div>
-    </div>
+<div class="app">
+  <img class="share-yunshi" src="../imgs/share-yunshi@2x.png" alt="">
+  <div class="user-info">
+    <img class="user-avatar" src="../imgs/avatar.jpg" alt="">
+    <div class="user-nickname">用户昵称</div>
   </div>
 </div>
 </body>
-<script>
-  //---------------------mock luck--------------------------
-  var arr = [96,66,85,35]
-  //---------------------mock luck--------------------------
-  for (var i = 0;i<arr.length;i++) {
-    //填充百分比数字
-    var luckDom = document.querySelector('.luck-num-' + (i+1))
-    luckDom.innerHTML = arr[i]
-    //绘制饼图
-    var ca = document.getElementById('luckCanvas'+(i+1))
-    var ctx = ca.getContext('2d')
-    //绘制大圆
-    ctx.beginPath();
-    ctx.arc(30, 30, 30, 0, 2 * Math.PI)
-    ctx.fillStyle='#eeeff0'
-    ctx.fill()
-
-    //绘制饼图
-    ctx.beginPath()
-    ctx.arc(30, 30, 30, -0.5 * Math.PI, ((arr[i]/100*2)-0.5) * Math.PI)
-    ctx.lineTo(30,30)
-    ctx.closePath()
-    ctx.fillStyle='#190000'
-    ctx.fill()
-
-  }
-
-</script>
 </html>
